@@ -2,7 +2,7 @@
 /*
    moz-plugin.c: Mozilla plugin
 
-   Copyright (C) 2003 Dom Lachowicz <cinamod@hotmail.com>
+   Copyright (C) 2003-2004 Dom Lachowicz <cinamod@hotmail.com>
    Copyright (C) 2003 David Schleef <ds@schleef.org>
 
    This program is free software; you can redistribute it and/or
@@ -47,9 +47,66 @@ typedef struct
 	int x;
 	int y;
 	int width, height;
+	int recv_fd, send_fd;
+	int player_pid;
 } Plugin;
 
 static NPNetscapeFuncs mozilla_funcs;
+
+static void
+plugin_fork (Plugin * plugin)
+{
+	int fds[4];
+	
+	pipe (fds);
+	pipe (fds + 2);
+	
+	plugin->recv_fd = fds[0];
+	plugin->send_fd = fds[3];
+	
+	plugin->player_pid = fork ();
+	if (plugin->player_pid == 0)
+		{
+			char xid_str[20];
+			char width_str[20];
+			char height_str[20];
+			char *argv[20];
+			int argc = 0;
+			
+			sprintf (xid_str, "%ld", plugin->window);
+			
+			/* child */
+			dup2 (fds[2], 0);
+			
+			argv[argc++] = "rsvg-view";
+			argv[argc++] = "-i"; /* xid */
+			argv[argc++] = xid_str;
+			
+			if (plugin->width)
+				{
+					sprintf (width_str, "%d", plugin->width);
+					argv[argc++] = "-w"; /* width */
+					argv[argc++] = width_str;
+				}
+			
+			if (plugin->height)
+				{
+					sprintf (height_str, "%d", plugin->height);
+					argv[argc++] = "-h"; /* height */
+					argv[argc++] = height_str;
+				}
+			
+			argv[argc++] = "-s";
+			argv[argc] = NULL;
+			
+			execvp ("rsvg-view", argv);
+			execv (BINDIR "rsvg-view", argv);
+			_exit (255);
+		}
+	
+	close (fds[1]);
+	close (fds[2]);
+}
 
 static NPError
 plugin_newp (NPMIMEType mime_type, NPP instance,
@@ -59,8 +116,8 @@ plugin_newp (NPMIMEType mime_type, NPP instance,
 	Plugin *plugin;
 	int i;
 	
-	DEBUG ("plugin_newp");
-	
+	DEBUG (("plugin_newp\n"));
+  
 	if (instance == NULL)
 		return NPERR_INVALID_INSTANCE_ERROR;
 	
@@ -76,18 +133,16 @@ plugin_newp (NPMIMEType mime_type, NPP instance,
 	
 	for (i = 0; i < argc; i++)
 		{
-			printf ("argv[%d] %s %s\n", i, argn[i], argv[i]);
+			/* DEBUG (("argv[%d] %s %s\n", i, argn[i], argv[i])); */
+			
 			if (strcmp (argn[i], "width") == 0)
-				{
-					plugin->width = strtol (argv[i], NULL, 0);
-				}
+				plugin->width = strtol (argv[i], NULL, 0);
+
 			if (strcmp (argn[i], "height") == 0)
-				{
-					plugin->height = strtol (argv[i], NULL, 0);
-				}
+				plugin->height = strtol (argv[i], NULL, 0);
 		}
 	
-	return NPERR_NO_ERROR;
+  return NPERR_NO_ERROR;
 }
 
 static NPError
@@ -95,16 +150,20 @@ plugin_destroy (NPP instance, NPSavedData ** save)
 {
 	Plugin *plugin;
 	
-	DEBUG ("plugin_destroy");
+	DEBUG (("plugin_destroy\n"));
 	
 	if (instance == NULL)
 		return NPERR_INVALID_INSTANCE_ERROR;
 	
 	plugin = (Plugin *) instance->pdata;
 	if (plugin == NULL)
-		{
-			return NPERR_NO_ERROR;
-		}
+		return NPERR_NO_ERROR;
+
+	close (plugin->send_fd);
+	close (plugin->recv_fd);
+
+	kill (plugin->player_pid, SIGKILL);
+	waitpid (plugin->player_pid, NULL, 0);
 	
 	mozilla_funcs.memfree (instance->pdata);
 	instance->pdata = NULL;
@@ -116,36 +175,36 @@ static NPError
 plugin_set_window (NPP instance, NPWindow * window)
 {
 	Plugin *plugin;
-
-	DEBUG ("plugin_set_window");
+	
+	DEBUG (("plugin_set_window\n"));
 	
 	if (instance == NULL)
 		return NPERR_INVALID_INSTANCE_ERROR;
-	
+
 	plugin = (Plugin *) instance->pdata;
 	if (plugin == NULL)
 		return NPERR_INVALID_INSTANCE_ERROR;
 	
 	if (plugin->window)
 		{
-			DEBUG ("existing window");
+			DEBUG (("existing window\n"));
+			
 			if (plugin->window == (Window) window->window)
 				{
-					DEBUG ("resize");
+					DEBUG (("resize\n"));
 					/* Resize event */
 					/* Not currently handled */
 				}
 			else
 				{
-					DEBUG ("change");
-					printf ("ack.  window changed!\n");
+					DEBUG (("change. ack.  window changed!\n"));
 				}
 		}
 	else
 		{
 			NPSetWindowCallbackStruct *ws_info;
 			
-			DEBUG ("about to fork");
+			DEBUG (("about to fork\n"));
 			
 			ws_info = window->ws_info;
 			plugin->window = (Window) window->window;
@@ -154,7 +213,7 @@ plugin_set_window (NPP instance, NPWindow * window)
 			plugin_fork (plugin);
 		}
 	
-	DEBUG ("leaving plugin_set_window");
+	DEBUG (("leaving plugin_set_window\n"));
 	
 	return NPERR_NO_ERROR;
 }
@@ -163,7 +222,7 @@ static NPError
 plugin_new_stream (NPP instance, NPMIMEType type,
 				   const char *window, NPStream ** stream_ptr)
 {
-	DEBUG ("plugin_new_stream");
+	DEBUG (("plugin_new_stream\n"));
 	
 	return NPERR_NO_ERROR;
 }
@@ -171,7 +230,16 @@ plugin_new_stream (NPP instance, NPMIMEType type,
 static NPError
 plugin_destroy_stream (NPP instance, NPStream * stream, NPError reason)
 {
-	DEBUG ("plugin_destroy_stream");
+	Plugin *plugin;
+
+	DEBUG (("plugin_destroy_stream\n"));
+
+	if (instance == NULL)
+		return NPERR_INVALID_INSTANCE_ERROR;
+	
+	plugin = (Plugin *) instance->pdata;
+	if (plugin == NULL)
+		return NPERR_NO_ERROR;
 	
 	return NPERR_NO_ERROR;
 }
@@ -181,9 +249,9 @@ plugin_write_ready (NPP instance, NPStream * stream)
 {
 	/* This is arbitrary */
 	
-	DEBUG ("plugin_write_ready");
+	DEBUG (("plugin_write_ready\n"));
 	
-	return 4096;
+	return (8*1024);
 }
 
 static int32
@@ -192,18 +260,21 @@ plugin_write (NPP instance, NPStream * stream, int32 offset,
 {
 	Plugin *plugin;
 	
-	DEBUG ("plugin_write");
+	DEBUG (("plugin_write\n"));
 	
 	if (instance == NULL)
 		return 0;
+
 	plugin = (Plugin *) instance->pdata;
 	
 	if (plugin == NULL)
 		return 0;
 	
-	/* TODO */
-	write (plugin->send_fd, buffer, len);
+	if (!plugin->player_pid)
+		return 0;
 	
+	write (plugin->send_fd, buffer, len);
+
 	return len;
 }
 
@@ -212,7 +283,7 @@ plugin_stream_as_file (NPP instance, NPStream * stream, const char *fname)
 {
 	Plugin *plugin;
 	
-	DEBUG ("plugin_stream_as_file");
+	DEBUG (("plugin_stream_as_file\n"));
 	
 	if (instance == NULL)
 		return;
@@ -221,10 +292,12 @@ plugin_stream_as_file (NPP instance, NPStream * stream, const char *fname)
 	if (plugin == NULL)
 		return;
 	
-	printf ("plugin_stream_as_file\n");
+	DEBUG (("plugin_stream_as_file\n"));
 }
 
 /* exported functions */
+
+NPError NP_GetValue (void *future, NPPVariable variable, void *value);
 
 NPError
 NP_GetValue (void *future, NPPVariable variable, void *value)
@@ -250,19 +323,20 @@ NP_GetValue (void *future, NPPVariable variable, void *value)
 		default:
 			err = NPERR_GENERIC_ERROR;
 		}
-	return err;
+	
+  return err;
 }
 
 char *
 NP_GetMIMEDescription (void)
 {
-	return ("application/svg:svg:Scalable Vector Graphics");
+	return ("image/svg+xml:svg:Scalable Vector Graphics");
 }
 
 NPError
 NP_Initialize (NPNetscapeFuncs * moz_funcs, NPPluginFuncs * plugin_funcs)
 {
-	printf ("NP_Initialize\n");
+	DEBUG (("NP_Initialize\n"));
 	
 	if (moz_funcs == NULL || plugin_funcs == NULL)
 		return NPERR_INVALID_FUNCTABLE_ERROR;
@@ -273,7 +347,7 @@ NP_Initialize (NPNetscapeFuncs * moz_funcs, NPPluginFuncs * plugin_funcs)
 		return NPERR_INVALID_FUNCTABLE_ERROR;
 	if (plugin_funcs->size < sizeof (NPPluginFuncs))
 		return NPERR_INVALID_FUNCTABLE_ERROR;
-	
+
 	memcpy (&mozilla_funcs, moz_funcs, sizeof (NPNetscapeFuncs));
 	
 	plugin_funcs->version = (NP_VERSION_MAJOR << 8) + NP_VERSION_MINOR;
